--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,3 +20,19 @@ spring:
     serialization:
       fail-on-empty-beans: false
 
+
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: YBlogLab@gmail.com
+    password: publicpass1234!
+    properties:
+      mail:
+        smtp:
+          starttls:
+            enable: true
+            required: true
+          auth: true
+          connectiontimeout: 5000
+          timeout: 5000
+          writetimeout: 5000
