--- a/build.gradle
+++ b/build.gradle
@@ -27,26 +27,27 @@ dependencies {
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.4.5'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '2.4.2'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.3.6.RELEASE'
-
-
     // json (오브젝트 클래스와 관련해서 필수)
     implementation group: 'commons-io', name: 'commons-io', version: '2.6'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
-
     //잭슨 라이브러리 추가 안시켜줘도 된다
-
     // 대역폭 조절 의존성
     implementation 'com.giffing.bucket4j.spring.boot.starter:bucket4j-spring-boot-starter:0.2.0'
 
+    // 모바일 디바이스 구분 의존성
+    implementation group: 'org.springframework.mobile', name: 'spring-mobile-device', version: '1.1.5.RELEASE'
 
 
     //새로 추가부분
+
+
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
 }
 
 test {
